--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,15 @@ a{
     text-decoration: none !important;
     color: black !important;
 }
+.loader-overlay {
+  position: fixed;
+  top: 15;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
